# wavefront-obj-file-loader

./: CMakeLists.txt  README.md
exsample/: CMakeLists.txt  main.cpp
include/obj_loader/: core.hpp  obj_loader.hpp
include/obj_loader/mtl/: mtl.hpp  mtl_parse.hpp  mtl_unit.hpp
